--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/brilliem/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + HeroUI</title>
+    <title>brilliem</title>
     <meta key="title" content="Vite + HeroUI" property="og:title" />
     <meta
       content="Make beautiful websites regardless of your design experience."
